--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -10,7 +10,6 @@
             overflow-wrap: break-word;
             min-width: 0;
         }
-
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -49,19 +48,21 @@
             href="https://github.com/tokio-rs/website/pull/109">Consider adding an "<em>Edit on GitHub</em>" link to the
             content on GitHub Pages to have an experience closer to wikis, easily permit editing, and to encourage
             contributions</a>. This is the official solution which can be burdensome and you are welcome to continue <a
-            href="#usage">using</a> GHWSEE.</a></p>
+            href="#usage">using</a> GHWSEE.</a>
+    </p>
     <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
         of Wiki content from appearing in search engines, participate in the discussion here: <a
             href="https://github.com/github/feedback/discussions/4992">https://github.com/github/feedback/discussions/4992</a>.
         Let us hope that GitHub can find a solution to unblock GitHub Wiki content in harmony with their SEO concerns,
-        and GHWSEE can be <a href="#decommissioning">decommissioned</a>. <a
+        and GHWSEE can be <a href="#decommissioning">decommissioned</a>. After 9 years, <a
             href="https://github.com/github/feedback/discussions/4992#discussioncomment-1885558">GitHub does appear to
             be privately experimenting letting some GitHub Wikis to be indexed if they meet some sort of criteria such
             as public non-editability and possibly a number of stars requirement, but the exact criteria is currently
             unknown.</a></p>
     <p> For anti-abuse reasons, all links rendered in the service that are going out of GitHub are tagged with
         <code>rel="nofollow ugc"</code> as to not affect search engine rankings or to promote mass vandalism of GitHub
-        Wikis. This is in addition to <code>rel="nofollow"</code> in the original content. </p>
+        Wikis. This is in addition to <code>rel="nofollow"</code> in the original content.
+    </p>
     <h2 id="usage">Usage</h2>
     <ul>
         <li>Wiki Reader: Use your favorite search engine! That is the intended interface to the content "on" this
