Closes Add missing image CSS #76

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -182,6 +182,14 @@
                 top: 0em;
             }
         }
+
+        /* Broken Images */
+        img:before {
+            content: "⚠️ MISSING OR BROKEN IMAGE RENDERING ERROR: PLEASE VIEW FULL PAGE ON GITHUB.COM ⚠️";
+            display: block;
+            margin-bottom: 10px;
+        }
+
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
