note gradual decomissioning

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -109,6 +109,12 @@
     <p>People shouldn't have linked to this site but maybe the warnings weren't big and red enough. <a
             href="https://github.com/nelsonjchen/github-wiki-see-rs/issues/6">Flashing yellow was very unpopular.</a>
     </p>
+    <p> As of January 2022, GitHub does appear to be letting some Wikis be indexed. A scan may be done to see what
+        amount of Wikis are permitted to be indexed and gradually or partially decomission GHWSEE for those Wikis. The
+        results of the scan may be used to generate a list of GitHub Wikis to automatically redirect users to and
+        disengage GHWSEE for those Wikis. The GHWSEE <code>wiki_index</code> synthesized views URLs might still be left
+        to index though as GitHub Wiki's default site design does not show wiki page links and that might hinder
+        crawling effectiveness. </p>
     <hr>
     <p> This project is not affiliated with GitHub in any way, if it wasn't obvious from the substandard CSS and code.
     </p>
