--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -112,9 +112,11 @@
     <p> As of January 2022, GitHub does appear to be letting a few Wikis be indexed according to some non-public
         uncriteria. Here is a small sample of Wikis that GitHub allows native indexing without
         <code>x-robots-tag: none</code>. GHWSEE has a manually periodically generated list of these Wikis burned in and
-        will permanently automatically redirect URLs with them to GitHub.com. At the moment, there are about 1.2k GitHub
-        Wikis permitted out of 420k GitHub Wikis to be directly indexed. Links below are for testing. This links help
-        test the partial decommissioning functionality.</p>
+        will permanently automatically redirect URLs with them to GitHub.com. <a
+            href="https://docs.google.com/spreadsheets/d/1_W9s8IhnSoypXjTKYSRBK5CNPTQJfXRl7V_1mY0Xq28/edit#gid=905984022">
+            At the moment, there are about 1.2k GitHub Wikis permitted out of 420k GitHub Wikis to be directly
+            indexed</a>. Links below are for testing. This links help test the partial decommissioning functionality.
+    </p>
     <ul>
         <li><a href="/m/microsoft/A-TALE-OF-THREE-CITIES/wiki">microsoft/A-TALE-OF-THREE-CITIES</a>
         </li>
