--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -115,8 +115,8 @@
         will permanently automatically redirect URLs with them to GitHub.com. <a
             href="https://docs.google.com/spreadsheets/d/1_W9s8IhnSoypXjTKYSRBK5CNPTQJfXRl7V_1mY0Xq28/edit#gid=905984022">
             At the moment, there are about 1.2k GitHub Wikis permitted out of 420k GitHub Wikis to be directly
-            indexed</a>. Links below are for testing. This links help test the partial decommissioning functionality.
-    </p>
+            indexed</a>. Links below are for testing. These links help test the partial decommissioning functionality.
+        Hopefully they make GHWSEE fall off search engines for these repositories. </p>
     <ul>
         <li><a href="/m/microsoft/A-TALE-OF-THREE-CITIES/wiki">microsoft/A-TALE-OF-THREE-CITIES</a>
         </li>
