--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -110,7 +110,7 @@
             href="https://github.com/nelsonjchen/github-wiki-see-rs/issues/6">Flashing yellow was very unpopular.</a>
     </p>
     <p> As of January 2022, GitHub does appear to be letting a few Wikis be indexed according to some non-public
-        uncriteria. Here is a small sample of Wikis that GitHub allows native indexing without
+        criteria. Here is a small sample of Wikis that GitHub allows native indexing without
         <code>x-robots-tag: none</code>. GHWSEE has a manually periodically generated list of these Wikis burned in and
         will permanently automatically redirect URLs with them to GitHub.com. <a
             href="https://docs.google.com/spreadsheets/d/1_W9s8IhnSoypXjTKYSRBK5CNPTQJfXRl7V_1mY0Xq28/edit#gid=905984022">
