--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -214,7 +214,7 @@
     </nav>
     <aside id="footer_info">
         <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span class="blocks">GitHub blocks
-                    many GitHub Wikis from search engines.</span></a></p>
+                    99.7% of GitHub Wikis from search engines.</span></a></p>
     </aside>
 </body>
 
