--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -62,7 +62,10 @@
             href="https://github.com/github/feedback/discussions/4992#discussioncomment-1885558">GitHub does appear to
             be privately experimenting letting some GitHub Wikis to be indexed if they meet some sort of criteria such
             as public non-editability and possibly a number of stars requirement, but the exact criteria is currently
-            unknown.</a></p>
+            unknown.</a> <a
+            href="https://docs.google.com/spreadsheets/d/1_W9s8IhnSoypXjTKYSRBK5CNPTQJfXRl7V_1mY0Xq28/edit#gid=905984022">
+            At the moment, there are about 1.2k GitHub Wikis permitted out of about 420k GitHub Wikis to be directly
+            indexed</a>. </p>
     <p> For anti-abuse reasons, all links rendered in the service that are going out of GitHub are tagged with
         <code>rel="nofollow ugc"</code> as to not affect search engine rankings or to promote mass vandalism of GitHub
         Wikis. This is in addition to <code>rel="nofollow"</code> in the original content. </p>
@@ -110,13 +113,11 @@
             href="https://github.com/nelsonjchen/github-wiki-see-rs/issues/6">Flashing yellow was very unpopular.</a>
     </p>
     <p> As of January 2022, GitHub does appear to be letting a few Wikis be indexed according to some non-public
-        criteria. Here is a small sample of Wikis that GitHub allows native indexing without
-        <code>x-robots-tag: none</code>. GHWSEE has a manually periodically generated list of these Wikis burned in and
-        will permanently automatically redirect URLs with them to GitHub.com. <a
-            href="https://docs.google.com/spreadsheets/d/1_W9s8IhnSoypXjTKYSRBK5CNPTQJfXRl7V_1mY0Xq28/edit#gid=905984022">
-            At the moment, there are about 1.2k GitHub Wikis permitted out of 420k GitHub Wikis to be directly
-            indexed</a>. Links below are for testing. These links help test the partial decommissioning functionality.
-        Hopefully they make GHWSEE fall off search engines for these repositories. </p>
+        criteria. These small sample of Wikis allow native indexing by not having a <code>x-robots-tag: none</code>
+        header. GHWSEE has a manually periodically generated list of these Wikis burned in and will permanently
+        automatically redirect URLs with them to GitHub.com. The sample of links links below help test the partial
+        decommissioning functionality. Hopefully the permanent redirects in GHWSEE will help GHWSEE fall off search
+        engines for these repositories. </p>
     <ul>
         <li><a href="/m/microsoft/A-TALE-OF-THREE-CITIES/wiki">microsoft/A-TALE-OF-THREE-CITIES</a>
         </li>
