--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -198,8 +198,7 @@
     <nav id="header_button">
         <a href="{{ original_url }}" class="visit_url_button"> View Full Page on GitHub.com</a>
         <p> The preview below may have <em>rendering errors</em>, <em>broken links</em>, <em>missing images</em>, and
-            does not include the <em>last updated date.</em>
-        </p>
+            does not include the <em>last updated date.</em> Please view the full page and not this preview. </p>
     </nav>
     <aside id="header_info">
         <p> Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
