--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -25,11 +25,12 @@
         service can be crawled and indexed by major search engines.
     </p>
     <p> Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository
-            wiki content</a> for wikis that are publically editable and some other unknown criteria(s) such as lack of
-        stars. You can find some direct GitHub.com Wiki content on search engines such as Google and DuckDuckGo but not
-        all. This negatively impacts the effectiveness of FAQs and other knowledge bases on GitHub Wikis and also
-        negatively impacts users who search for information that may only be found on those GitHub Wikis that do not
-        meet GitHub's currently ambiguious criteria.</p>
+            wiki content</a> for wikis that are publically editable and some other unknown criteria(s). You can find <a
+            href="https://docs.google.com/spreadsheets/d/1_W9s8IhnSoypXjTKYSRBK5CNPTQJfXRl7V_1mY0Xq28/edit#gid=905984022">about
+            1,200</a> direct GitHub.com Wikis' content on search engines such as Google and DuckDuckGo but not the
+        roughly remaining 420,000. The blocking negatively impacts the effectiveness of FAQs and other knowledge bases
+        on GitHub Wikis and also negatively impacts users who search for information that may only be found on those
+        GitHub Wikis that do not meet GitHub's currently ambiguious criteria.</p>
     <p> GHWSEE proxies the rendered contents of the pages and has a link with a large button at the top to visit the
         page on GitHub for everyday usage and a link at the bottom explaining what GHWSEE is. The content of this
         service is not meant to be read directly by users and is intended for crawlers. GHWSEE is designed to behave
