--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -196,10 +196,10 @@
 
 <body id="main">
     <nav id="header_button">
-        <a href="{{ original_url }}" class="visit_url_button"> View Full Page on GitHub.com</a>
-        <p>⚠️ The preview below may have <em>rendering errors</em>, <em>broken links</em>, <em>missing images</em>, and
-            does not include the <em>last updated date.</em> Please view the full page and not this preview if you
-            intend to <em>use</em> this content. </p>
+        <a href="{{ original_url }}" class="visit_url_button"> View Original Page on GitHub.com</a>
+        <p>⚠️ The indexable preview below may have <em>rendering errors</em>, <em>broken links</em>, <em>missing
+                images</em>, and does not include the <em>last updated date.</em> Please view the original page on
+            GitHub.com and not this indexable preview if you intend to <em>use</em> this content. </p>
     </nav>
     <aside id="header_info">
         <p>📄 Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
@@ -213,8 +213,8 @@
         <a href="{{ index_url }}">🗂️ Page Index for this GitHub Wiki</a>
     </nav>
     <aside id="footer_info">
-        <p><a href="/">ℹ️ About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span class="blocks">GitHub blocks
-                    99.7% of GitHub Wikis from search engines.</span></a></p>
+        <p><a href="/">ℹ️ About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span class="blocks">GitHub
+                    blocks 99.7% of GitHub Wikis from search engines.</span></a></p>
     </aside>
 </body>
 
