emoji for win10

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -190,6 +190,10 @@
             margin-bottom: 10px;
         }
 
+        .emoji {
+            font-family: 'Segoe UI Emoji', 'Segoe UI Symbol';
+        }
+
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -213,7 +217,7 @@
         <a href="{{ index_url }}">🗂️ Page Index for this GitHub Wiki</a>
     </nav>
     <aside id="footer_info">
-        <p><a href="/">ℹ️ About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span class="blocks">GitHub
+        <p><a href="/"><span class="emoji">ℹ️</span>About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span class="blocks">GitHub
                     blocks 99.7% of GitHub Wikis from search engines.</span></a></p>
     </aside>
 </body>
