--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -190,10 +190,17 @@
             margin-bottom: 10px;
         }
 
-        .emoji {
-            font-family: 'Segoe UI Emoji', 'Segoe UI Symbol';
+        @font-face {
+            font-family: "color-emoji";
+            src: local("Apple Color Emoji"),
+                local("Segoe UI Emoji"),
+                local("Segoe UI Symbol"),
+                local("Noto Color Emoji");
         }
 
+        .emoji {
+            font-family: "color-emoji";
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -217,7 +224,8 @@
         <a href="{{ index_url }}">🗂️ Page Index for this GitHub Wiki</a>
     </nav>
     <aside id="footer_info">
-        <p><a href="/"><span class="emoji">ℹ️</span>About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span class="blocks">GitHub
+        <p><a href="/"><span class="emoji">ℹ️</span>About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span
+                    class="blocks">GitHub
                     blocks 99.7% of GitHub Wikis from search engines.</span></a></p>
     </aside>
 </body>
