--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -68,8 +68,9 @@
             At the moment, there are about 1.2k GitHub Wikis permitted out of about 420k GitHub Wikis to be directly
             indexed</a>. </p>
     <p> For anti-abuse reasons, all links rendered in the service that are going out of GitHub are tagged with
-        <code>rel="nofollow ugc"</code> as to not affect search engine rankings or to promote mass vandalism of GitHub
-        Wikis. This is in addition to <code>rel="nofollow"</code> in the original content. </p>
+        <code>rel="nofollow <a href="https://developers.google.com/search/blog/2019/09/evolving-nofollow-new-ways-to-identify">ugc</a>"</code>
+        as to not affect search engine rankings or to promote mass vandalism of GitHub Wikis. This is in addition to
+        <code>rel="nofollow"</code> in the original content. </p>
     <h2 id="usage">Usage</h2>
     <ul>
         <li>Wiki Reader: Use your favorite search engine! That is the intended interface to the content "on" this
