--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -37,7 +37,7 @@
         like those StackOverflow content mirroring sites that rank high with "stolen" content from StackOverflow but
         with far less ad-farming. Unlike its inspiration, GHWSEE has no ads and tries to make it obvious, quick, and
         easy for users to get to the content they want directly on GitHub.com short of an automatic redirect that may
-        make search engines not crawl the content.</p>
+        make search engines not crawl or index the content.</p>
     <p> Another purpose of GHWSEE is to bring awareness to the issue of GitHub Wikis purposefully not being indexed
         since <a href="https://github.com/isaacs/github/issues/1683#issuecomment-763628184">2012</a>. Many are caught
         off-guard and have produced massive libraries of information that they are unaware of being generally invisible
