--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -201,6 +201,7 @@
         .emoji {
             font-family: "color-emoji";
         }
+
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -225,8 +226,7 @@
     </nav>
     <aside id="footer_info">
         <p><a href="/"><span class="emoji">ℹ️</span>About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span
-                    class="blocks">GitHub
-                    blocks 99.7% of GitHub Wikis from search engines.</span></a></p>
+                    class="blocks">GitHub blocks 99.7% of all GitHub Wikis from search engines.</span></a></p>
     </aside>
 </body>
 
