--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -13,6 +13,14 @@
 
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="GitHub blocks direct indexing of 99.7% of all GitHub Wikis. Workaround service to get 99.7% of GitHub Wikis indexed in Google and other search engines.">
+    <meta property="og:url" content="https://github-wiki-see.page/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="GitHub Wiki Search Engine Enablement">
+    <meta property="og:description"
+        content="GitHub blocks direct indexing of 99.7% of all GitHub Wikis. This is a workaround service to get those 99.7% of all GitHub Wikis indexed in Google and other search engines.">
+    <meta property="og:image" content="">
 </head>
 
 <body id="main">
