--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -204,6 +204,12 @@
 
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Not used, did not want to risk non-indexing. -->
+    <!-- <meta property="og:url" content="{{ original_url }}"> -->
+    <!-- Did not want to risk contaminating content to be indexed. -->
+    <!-- <meta property="og:description" content="not used"> -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="{{ original_title }}">
 </head>
 
 <body id="main">
