--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -51,8 +51,9 @@
         off-guard and have produced massive libraries of information that they are unaware of being generally invisible
         to the internet. Likewise, many searching for information in these libraries are not aware that the information
         is invisible to them if it was in a GitHub Wiki. <a href="https://github.com/github/docs/pull/5054">Up until
-            April 2021 (9 years since 2012), GitHub did not document this limitation, and a warning is not present in
-            GitHub's UI itself; the only way you knew was by previously looking at robots.txt.</a></p>
+            April 2021 (9 years since 2012), GitHub did not document this limitation; the only way you knew was by
+            previously looking at robots.txt.</a> A warning is still not present in GitHub's UI itself about this
+        limitation.</p>
     <p> If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
         your community's content as a more crawlable, stable, blessed, and probably higher search ranking alternative.
         <a
