--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -128,7 +128,7 @@
         header. GHWSEE has a manually periodically generated list of these Wikis burned in and will permanently
         automatically redirect URLs with them to GitHub.com. The sample of links links below help test the partial
         decommissioning functionality. Hopefully the permanent redirects in GHWSEE will help GHWSEE fall off search
-        engines for these repositories. </p>
+        engines for all currently directly indexable repositories. </p>
     <ul>
         <li><a href="/m/microsoft/A-TALE-OF-THREE-CITIES/wiki">microsoft/A-TALE-OF-THREE-CITIES</a>
         </li>
