tag this as a link too

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -220,7 +220,7 @@
             GitHub.com and not this indexable preview if you intend to <em>use</em> this content. </p>
     </nav>
     <aside id="header_info">
-        <p>📄 Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
+        <p>📄 Original URL: <a href="{{ original_url }}" class="visit_url_link">{{ original_url }}</a>
         </p>
     </aside>
     <article id="content">
