--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -185,7 +185,7 @@
 
         /* Broken Images */
         img:before {
-            content: "⚠️ MISSING OR BROKEN IMAGE RENDERING ERROR: PLEASE VIEW FULL PAGE ON GITHUB.COM ⚠️";
+            content: "⚠️ MISSING OR BROKEN IMAGE RENDERING ERROR: PLEASE VIEW ORIGINAL PAGE ON GITHUB.COM ⚠️";
             display: block;
             margin-bottom: 10px;
         }
