--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -240,8 +240,9 @@
         <a href="{{ index_url }}">🗂️ Page Index for this GitHub Wiki</a>
     </nav>
     <aside id="footer_info">
-        <p><a href="/"><span class="emoji">ℹ️</span>About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <span
-                    class="blocks">GitHub blocks 99.7% of all GitHub Wikis from search engines.</span></a></p>
+        <p><a href="/"><span class="emoji">ℹ️</span>About GitHub Wiki SEE, a search engine enabler for GitHub Wikis as
+                <span class="blocks">GitHub blocks 99.7% of all GitHub Wikis from search engines.</span></a></p>
+        <p>There are <em>no ads</em> in this search engine enabler service. Use the links or button above.</p>
     </aside>
 </body>
 
