--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -242,8 +242,8 @@
     <aside id="footer_info">
         <p><a href="/"><span class="emoji">ℹ️</span>About GitHub Wiki SEE, a search engine enabler for GitHub Wikis as
                 <span class="blocks">GitHub blocks 99.7% of all GitHub Wikis from search engines.</span></a></p>
-        <p>There are <em>no ads</em> in this search engine enabler service. The buttom or link at the top will take you
-            directly to GitHub.com.</p>
+        <p>There are <em>no ads</em> in this search engine enabler service. The button and/or link at the top will take
+            you <em>directly</em> to GitHub.</p>
     </aside>
 </body>
 
