--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -127,7 +127,7 @@
     <p> As of January 2022, GitHub does appear to be letting a few Wikis be indexed according to some non-public
         criteria. These small sample of Wikis allow native indexing by not having a <code>x-robots-tag: none</code> HTTP
         header. GHWSEE has a manually periodically generated list of these Wikis burned in and will permanently
-        automatically redirect URLs with them to GitHub.com. The sample of links links below help test the partial
+        automatically redirect URLs with them to GitHub.com. The sample of links below help test the partial
         decommissioning functionality. Hopefully the permanent redirects in GHWSEE will help GHWSEE fall off search
         engines for all currently directly indexable repositories. </p>
     <ul>
