Update numbers for GitHub Wikis being indexed

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -14,12 +14,12 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="GitHub blocks direct indexing of 99.7% of all GitHub Wikis. Workaround service to get 99.7% of GitHub Wikis indexed in Google and other search engines.">
+        content="GitHub blocks direct indexing of 99.2% of all GitHub Wikis. Workaround service to get 99.2% of GitHub Wikis indexed in Google and other search engines.">
     <meta property="og:url" content="https://github-wiki-see.page/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="GitHub Wiki Search Engine Enablement">
     <meta property="og:description"
-        content="GitHub blocks direct indexing of 99.7% of all GitHub Wikis. This is a workaround service to get those 99.7% of all GitHub Wikis indexed in Google and other search engines.">
+        content="GitHub blocks direct indexing of 99.2% of all GitHub Wikis. This is a workaround service to get those 99.2% of all GitHub Wikis indexed in Google and other search engines.">
     <meta property="og:image" content="">
 </head>
 
@@ -35,8 +35,8 @@
     <p> Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository
             wiki content</a> for wikis that are publically editable and some other unknown criteria(s) that most wikis
         do not meet. You can find <a
-            href="https://docs.google.com/spreadsheets/d/1_W9s8IhnSoypXjTKYSRBK5CNPTQJfXRl7V_1mY0Xq28/edit#gid=905984022">
-            about 1,200</a> direct GitHub.com Wikis' content on search engines such as Google and DuckDuckGo but not the
+            href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
+            about 3,300</a> direct GitHub.com Wikis' content on search engines such as Google and DuckDuckGo but not the
         roughly remaining 420,000. The blocking negatively impacts the effectiveness of FAQs and other knowledge bases
         on GitHub Wikis and also negatively impacts users who search for information that may only be found on those
         GitHub Wikis that do not meet GitHub's currently ambiguious criteria.</p>
@@ -74,8 +74,8 @@
             be privately experimenting letting some GitHub Wikis to be indexed if they meet some sort of criteria such
             as public non-editability and possibly a number of stars requirement, but the exact criteria is currently
             unknown.</a> <a
-            href="https://docs.google.com/spreadsheets/d/1_W9s8IhnSoypXjTKYSRBK5CNPTQJfXRl7V_1mY0Xq28/edit#gid=905984022">
-            At the moment, there are about 1.2k GitHub Wikis permitted out of about 420k GitHub Wikis to be directly
+            href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
+            At the moment, there are about 3.3k GitHub Wikis permitted out of about 420k GitHub Wikis to be directly
             indexed</a>. </p>
     <p> For anti-abuse reasons, all links rendered in the service that are going out of GitHub are tagged with
         <code>rel="nofollow <a href="https://developers.google.com/search/blog/2019/09/evolving-nofollow-new-ways-to-identify">ugc</a>"</code>
