--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -131,9 +131,9 @@
         decommissioning functionality. Hopefully the permanent redirects in GHWSEE will help GHWSEE fall off search
         engines for all currently directly indexable repositories. </p>
     <ul>
-        <li><a href="/m/microsoft/A-TALE-OF-THREE-CITIES/wiki">microsoft/A-TALE-OF-THREE-CITIES</a>
+        <li><a href="/m/TileDB-Inc/TileDB/wiki">TileDB-Inc/TileDB</a>
         </li>
-        <li><a href="/m/zaclimon/xipl/wiki">zaclimon/xipl</a>
+        <li><a href="/m/PixarAnimationStudios/USD/wiki">PixarAnimationStudios/USD</a>
         </li>
     </ul>
     <hr>
